syntax = "proto3";

package storage.v1;

service StorageService {
   rpc FindBySubscriptionDetailId(SubscriptionDetailIdRequest) returns (StorageResponse) {}
}

message SubscriptionDetailIdRequest {
  string subscription_detail_id = 1;
}

message StorageResponse {
  string id = 1;
  string storage_type_id = 2;
  string subscription_detail_id = 3;
  double created_at = 4;
  double updated_at = 5;
}